# MIRMIS-NIR-MIR-pipeline

./: .gitignore  README.md  pyproject.toml
calibration/: calib_coefs.yaml
calibration/DARKS/: NIR_DARK.fits
calibration/FLATS/: NIR_FLAT.fits
calibration/RADIANCE/: MIR_RADIANCE.txt  NIR_RADIANCE.txt
calibration/SOLAR/: ssi_yearly_avg_e2024_c20250221.csv
configs/: pipeline.example.yaml  pipeline.yaml
data/ASPECT_data/MIR/meta/: calib.json  config.json  telemetry.json
data/ASPECT_data/NIR/meta/: telemetry.json
data/ASPECT_data/NIR_2/acq_000/: dc_0_exp_000.bin.jp2  dc_0_exp_007.bin.jp2
docs/diagrams/: system:overview_diagram.txt
docs/pds4_templates/: CI_MIRMIS_MIR_template.xml  CI_MIRMIS_NIR_MIR_template.xml  CI_MIRMIS_NIR_template.xml  LTM_2024008_000439_MD_XX_34N_083E_V01_BTM_TW.xml  a0708_p242914_02_02v01.xml  as1_000000_270323t060000_1c.xml  empty-ASPECT-fits-template.xml
outputs/000_test/: MIR_000000_200101T015157_0A.fits  MIR_000000_200101T015157_1A.fits  MIR_000000_200101T015157_1B.fits
outputs/pytest/: MIR_000000_200101T015948_0A.fits
pds4_templates/: CI_MIRMIS_NIRMIR_template.xml.j2  CI_MIRMIS_NIR_template.xml.j2
src/nir_mir_pipeline/: cli.py
src/nir_mir_pipeline/pipeline/: run.py
src/nirmir_pipeline/: cli.py
src/nirmir_pipeline/pipeline/: config.py  run.py  visualise.py
src/nirmir_pipeline/utils/: logging_config.py  modify.py
tests/: level_0.py  level_1.py  test_level_0.py  test_level_1.py  test_pipeline_complete.py  test_pipeline_config.py  test_pipeline_level_0.py  test_pipeline_level_1.py
tests/configs/: test.json  test.yaml
tests/data/calib/: BADPIXELS.txt  DARK_05.fits  RADIANCE.txt  cluster.txt  col_row.txt  ones.fits  pixels.txt  range.fits  twos.fits
tests/data/fits/: NIR_1A.fits  NIR_1B.fits
tests/data/fits_old/: MIR_000000_0000000000000_0A.fits  MIR_1B.fits  NIR_0A.fits
(+43 files in other folders)
