[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirmis-nir-mir-pipeline"
version = "0.1.0"
description = "Ground processing pipeline for MIRMIS/NIR-MIR instrument"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "h5netcdf>=1.8.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "spiceypy>=8.0.2",
    "xarray>=2026.2.0",
]

[project.scripts]
mirmis = "nirmir_pipeline.cli:main" 

[tool.hatch.build.targets.wheel]
packages = ["src/nirmir_pipeline"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
